@@ -4,7 +4,7 @@
 
    Copyright (C) 2012, Molnár Károly <proton7@freemail.hu>
 
-   This library is free software; you can redistribute it and/or modify it
+   This program is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
    Free Software Foundation; either version 2, or (at your option) any
    later version.
@@ -18,13 +18,6 @@
    along with this library; see the file COPYING. If not, write to the
    Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston,
    MA 02110-1301, USA.
-
-   As a special exception, if you link this library with other files,
-   some of which are compiled with SDCC, to produce an executable,
-   this library does not by itself cause the resulting executable to
-   be covered by the GNU General Public License. This exception does
-   not however invalidate any other reasons why the executable file
-   might be covered by the GNU General Public License.
 
    ------------------------------------------------------------------
 
@@ -1518,7 +1511,7 @@ sub read_list_file($)
     chomp;
     s/\r$//o;
 
-  # Empty line.
+        # Empty line.
     next if ($_ =~ /^\s*$/o);
 
     s/^\s*|\s*$//go;
@@ -1808,8 +1801,6 @@ sub create_gpprocessor_c()
 
   open($out_handler, '>', $name) || die "create_gpprocessor_c(): Could not create the \"$name\" file!\n";
 
-  my $v = @gpproc_c_content;
-
         # This the part of the gpprocessor.c file before the table.
 
   Outl(join("\n", @gpproc_c_content[ 0 .. $px_struct_begin ]));
@@ -1823,7 +1814,7 @@ sub create_gpprocessor_c()
 
         # This the part of the gpprocessor.c file after the table.
 
-  Outl(join("\n", @gpproc_c_content[ $px_struct_end .. ($v - 1) ]));
+  Outl(join("\n", @gpproc_c_content[ $px_struct_end .. $#gpproc_c_content ]));
   close($out_handler);
   }
 
